--- a/index.html
+++ b/index.html
@@ -1,53 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Food Products Landing Page</title>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge"> 
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <title>CALCULATOR</title>
 </head>
 <body>
-    <div class="background"></div>
-    <div class="header">
-        <a href="#" class="button" id="homeButton">Home</a>
-        <a href="#" class="button" id="aboutButton">About Us</a>
-        <a href="#" class="button" id="productsButton">Our Products</a>
-    </div>
-    <div class="content">
-        <h1>Welcome to SHIVA Food Products Page</h1>
-        <h3>Explore our delicious range of food products!</h3>
-        <center>
-            <h2>FOOD ITEMS</h2>
-        </center>
-        <div class="food-info">
-            <div class="BIRIYANI">
-                <img src="biriyani.jpeg" alt="BIRIYANI">
-                <h1>BIRIYANI</h1>
-                <h3>Biryani is a flavorful dish made with aromatic Basmati rice, tender meat or vegetables, and a blend of spices.</h3>
-            </div>
-            <div class="PAROTTA">
-                <img src="parotta.jpeg" alt="PAROTTA">
-                <h1>PAROTTA</h1>
-                <h3>
-                    Parotta is a popular South Indian flatbread that originated in the Indian state of Tamil Nadu. It is also commonly consumed in Kerala and parts of Karnataka. Parotta is known for its flaky, layered texture, which is achieved through a unique kneading and folding technique.</h3>
-            </div>
-    </div>
-</div>
-
-            <style>
-                .stay-connected-inner .fa {
-                    font-size:48px;
-                    color:blue;
-                }
-            </style>
+    <div class="container">
+        <div class="calculator">
+            <input type="text" placeholder="0" id="output-screen">
+            <button onclick="clearOutput()">clr</button>
+            <button onclick="display('%')">%</button>
+            <button onclick="del()">del</button>
+            <button onclick="display('/')">/</button>
+            <button onclick="display('7')">7</button>
+            <button onclick="display('8')">8</button>
+            <button onclick="display('9')">9</button>
+            <button onclick="display('*')">*</button>
+            <button onclick="display('4')">4</button>
+            <button onclick="display('5')">5</button>
+            <button onclick="display('6')">6</button>
+            <button onclick="display('-')">-</button>
+            <button onclick="display('1')">1</button>
+            <button onclick="display('2')">2</button>
+            <button onclick="display('3')">3</button>
+            <button onclick="display('+')">+</button>
+            <button onclick="display('00')">00</button>
+            <button onclick="display('0')">0</button>
+            <button onclick="display('.')">.</button>
+            <button onclick="calculate('=')" class="equal">=</button> <!-- Removed unnecessary quotes -->
         </div>
     </div>
-    <ul class="stay-connected-inner">
-        <li><a href="#"><i class="fa fa-twitter fa-3" aria-hidden="true"></i></a></li>
-        <li><a href="#"><i class="fa fa-linkedin fa-3" aria-hidden="true"></i></a></li>
-        <li><a href="#"><i class="fa fa-instagram fa-3" aria-hidden="true"></i></a></li>
-        <li><a href="#"><i class="fa fa-facebook fa-3" aria-hidden="true"></i></a></li>
-    </ul>
+    <script>
+        let outputScreen = document.getElementById("output-screen");
+        function display(num) {
+            outputScreen.value += num;
+        }
+        function calculate() {
+            try {
+                outputScreen.value = eval(outputScreen.value);
+            }
+            catch (err) {
+                alert("invalid");
+            }
+        }
+     function clearOutput() {
+    outputScreen.value = "";
+}
+        function del() {
+            outputScreen.value = outputScreen.value.slice(0, -1);
+        }
+    </script>
 </body>
 </html>
+
